home screen completed

--- a/lib/Language/en.json
+++ b/lib/Language/en.json
@@ -24,7 +24,7 @@
   "TOTAL_PRICE": "Total Price",
   "DELIVERY_CHARGE": "Delivery Charge",
   "HOME_LBL": "Home",
-  "FAVORITE": "Favorite",
+  "FAVORITE": "WishList",
   "NOTIFICATION": "Notifications",
   "TRACK_ORDER": "Track Order",
   "TAXPER": "Tax",
