resolve all functionality

--- a/lib/Language/en.json
+++ b/lib/Language/en.json
@@ -111,7 +111,7 @@
   "DEFAULT_ADD": "Set as a default address",
   "NOADDRESS": "No Address Found..!!",
   "UPDATEADD": "Update Address",
-  "PREFERED_TIME": "Preferred Delivery Date/Time",
+  "PREFERED_TIME": "Preferred Delivery Date",
   "PAYMENT_METHOD_LBL": "Payment Method",
   "COD_LBL": "Cash On Delivery",
   "PLACE_ORDER": "Place Order",
@@ -312,7 +312,7 @@
   "All": "All",
   "DISCARD": "Discard",
   "ADD_COMPARE": "Added to compare list..",
-  "MYBAG": "MY BAG",
+  "MYBAG": "Cart",
   "Choose_PROMO": "Choose Your Promo Code",
   "CHOOSE_DIS": "Choose Your Discount",
   "WITH_PHOTO": "with photo",
@@ -337,7 +337,7 @@
   "RATINGS": "ratings",
   "NO_DESC": "No Description Found..!",
   "OFFER": "OFFER ZONE",
-  "NOTE": "Special Note",
+  "NOTE": "Delivery Note",
   "SOLD_BY": "Sold By",
   "SHOP_BY_SELLER": "Shop By Seller",
   "MIN_CART_AMT": "Your amount is lower than minimum order amount",
@@ -354,7 +354,7 @@
   "COMPARETEXTDIG": "This product is not compatible with exists selected products/Items",
   "OPENLIST": "Open List",
   "CLEARLIST": "Clear List",
-  "YOUR_PROM_CO": "Your Promo Codes",
+  "YOUR_PROM_CO": "My Promo Codes",
   "NO_PROMCO": "Promo Codes Not Found!!!",
   "MIN_ORDER_VALUE": "Offer is applicable on Minimum Order value of",
   "MAX_DISCOUNT": "Maximum instant discount of",
