correct the payment fun

--- a/lib/Language/en.json
+++ b/lib/Language/en.json
@@ -65,7 +65,7 @@
   "COUNTRY_CODE_LBL": "Select country code",
   "TOTAL_LBL": "Total",
   "noItem": "No Item Found..!!",
-  "noFav": "No Favorite Found..!!",
+  "noFav": "No Favorites Found..!!",
   "noNoti": "No Notification Found..!!",
   "goToLogin": "Please login to access favorite..!!",
   "selectVarient": "Select Variant",
